<resources>
    <string name="app_name">Custom Download App</string>

    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="notification_channel_id" translatable="false">custom_download_channel</string>


    <string name="option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="option_udacity">LoadApp - Current repository by Udacity</string>
    <string name="option_retrofit">Retrofit - Type-safe HTTP client for Android and Java Square,Inc</string>
    <string name="option_not_selected">Please, Select one file to download it.</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download_complete">Complete</string>

    <string name="title_activity_detail">Download Detail</string>
    <string name="file_name_text">File name</string>
    <string name="status_text">Status</string>
    <string name="button_okay">Ok</string>
</resources>